--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -111,8 +111,9 @@ blockquote {
 pre,
 code {
     border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+    border-radius: 4px;
+    font-size: 12px;
+    background-color: #eee;
 }
 
 code {
