--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,8 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <li class="post-group">
-      <b class="post-header" itemprop="name headline">{{ page.title }}</b>
-      <span class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
-    </li>
+    <b class="post-title" itemprop="name headline">{{ page.title }}</b>
+    <span class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></span>
   </header>
 
   <div class="post-content" itemprop="articleBody">
