--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,10 +5,9 @@
 }
 
 .site-title {
-    font-size: 26px;
-    font-weight: 700;
+    font-size: 14px;
+    font-weight: 400;
     line-height: 56px;
-    letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
 
@@ -27,6 +26,7 @@
     }
 
     .page-link {
+        font-size: 14px;
         color: $text-color;
         line-height: $base-line-height;
 
@@ -128,7 +128,7 @@
 
 .post-meta {
     color: $grey-color;
-    float: right;
+    float: right
 }
 
 /**
@@ -140,6 +140,7 @@
 
 .post-title {
     line-height: 1;
+    font-size: 22px;
 }
 
 .post-content {
