--- a/css/main.scss
+++ b/css/main.scss
@@ -4,16 +4,16 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: 'Roboto Mono';
-$base-font-size:   18px;
+$base-font-family: 'Roboto';
+$base-font-size:   14px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
+$text-color:       #222;
+$background-color: #ffffff;
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
@@ -25,7 +25,6 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-
 
 
 @mixin media-query($device) {
