--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,7 +5,6 @@
 }
 
 .site-title {
-    font-size: 14px;
     font-weight: 400;
     line-height: 56px;
     margin-bottom: 0;
@@ -26,7 +25,7 @@
     }
 
     .page-link {
-        font-size: 14px;
+        font-size: $base-font-size;
         color: $text-color;
         line-height: $base-line-height;
 
