--- a/css/main.scss
+++ b/css/main.scss
@@ -4,9 +4,9 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: 'Roboto';
-$base-font-size:   17px;
-$base-font-weight: 400;
+$base-font-family: 'Open Sans';
+$base-font-size:   18px;
+$base-font-weight: 200;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
