--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -111,7 +111,7 @@ blockquote {
  */
 pre,
 code {
-    border: 1px solid $grey-color-light;
+    border: 1px solid $grey-color;
     border-radius: 4px;
     font-size: 14px;
     background-color: #eee;
