--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,14 +5,14 @@
 }
 
 .site-title {
-    font-weight: 400;
     line-height: 56px;
     margin-bottom: 0;
     float: left;
+    color: $text-color;
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: black;
     }
 }
 
@@ -139,14 +139,22 @@
 
 .post-title {
     line-height: 1;
-    font-size: 22px;
+    font-size: $big-font-size;
 }
 
 .post-content {
     margin-bottom: $spacing-unit;
+    h1 {
+        font-size: $big-font-size;
+        font-weight: bold;
+
+        @include media-query($on-laptop) {
+            font-size: 28px;
+        }
+    }
 
     h2 {
-        font-size: 32px;
+        font-size: $big-font-size;
 
         @include media-query($on-laptop) {
             font-size: 28px;
@@ -154,16 +162,12 @@
     }
 
     h3 {
-        font-size: 26px;
-
         @include media-query($on-laptop) {
             font-size: 22px;
         }
     }
 
     h4 {
-        font-size: 20px;
-
         @include media-query($on-laptop) {
             font-size: 18px;
         }
@@ -176,4 +180,8 @@ table {
 
 table, th, td {
     padding: 5px;
+}
+
+html {
+    overflow-y: scroll;
 }
