--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@ $base-font-size:   18px;
 $base-font-weight: 200;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
+$big-font-size:    28px;
 
 $spacing-unit:     30px;
 
@@ -16,8 +17,8 @@ $text-color:       #222;
 $background-color: #ffffff;
 $brand-color:      #2a7ae2;
 
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
+$grey-color:       #aaaaaa;
+$grey-color-light: lighten($grey-color, 60%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
