--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@ $base-font-weight: 200;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 $big-font-size:    28px;
+$medium-font-size: $big-font-size * 0.8;
 
 $spacing-unit:     30px;
 
