--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -111,8 +111,8 @@ blockquote {
  */
 pre,
 code {
-    border: 1px solid $grey-color;
-    border-radius: 4px;
+    border: 1px solid $grey-color-light;
+    border-radius: 6px;
     font-size: 14px;
     background-color: #eee;
 }
