add insta to about

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -114,7 +114,7 @@ code {
     border: 1px solid $grey-color-light;
     border-radius: 6px;
     font-size: 14px;
-    background-color: #eee;
+    background-color: $background-color;
 }
 
 code {
