--- a/css/main.scss
+++ b/css/main.scss
@@ -4,12 +4,13 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: 'Open Sans';
-$base-font-size:   18px;
+$base-font-family: 'PT Serif', serif;
+$base-font-size:   16px;
 $base-font-weight: 200;
+$code-font-size:   14px;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
-$big-font-size:    28px;
+$base-line-height: 1.25;
+$big-font-size:    26px;
 $medium-font-size: $big-font-size * 0.8;
 
 $spacing-unit:     30px;
@@ -17,19 +18,18 @@ $text-padding:     14px;
  
 $text-color:        #000;
 $text-background:   #fff;
-$background-color:  #fff7f2;
-$brand-color:       #308aff;
-$title-color:       #aa3300;
+$background-color:  #fff;
+$title-color:       #000;
 
 $grey-color:       #aaaaaa;
-$grey-color-light: lighten($grey-color, 60%);
+$grey-color-light: lighten($grey-color, 30%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    900px;
 
 $on-palm:          600px;
-$on-laptop:        800px;
+$on-laptop:        900px;
 
 
 @mixin media-query($device) {
