--- a/css/main.scss
+++ b/css/main.scss
@@ -5,13 +5,16 @@
 
 // Our variables
 $base-font-family: 'PT Serif', serif;
+//$base-font-family: 'Roboto', sans-serif;
+$header-font-family: 'Roboto Slab', serif;
+$header-font-size: 34px;
 $base-font-size:   16px;
 $base-font-weight: 200;
 $code-font-size:   14px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.25;
-$big-font-size:    26px;
-$medium-font-size: $big-font-size * 0.8;
+$big-font-size:    24px;
+$medium-font-size: $big-font-size * 0.9;
 
 $spacing-unit:     30px;
 $text-padding:     14px;
@@ -22,7 +25,8 @@ $background-color:  #fff;
 $title-color:       #000;
 
 $grey-color:       #aaaaaa;
-$grey-color-light: lighten($grey-color, 30%);
+$grey-color-light: lighten($grey-color, 10%);
+$grey-color-very-light: lighten($grey-color, 25%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
