--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,8 @@ layout: default
 
   <header class="post-header">
     <b class="post-title" itemprop="name headline">{{ page.title }}</b>
-    <span class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></span>
   </header>
+  <div class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></div>
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
