--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -43,54 +43,6 @@
         }
     }
 
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-
-            &:not(:last-child) {
-                margin-right: 0;
-            }
-            margin-left: 20px;
-        }
-    }
 }
 
 @include media-query($on-laptop) {
@@ -142,20 +94,19 @@
 
 .post-meta {
     color: $grey-color;
-    padding-right: $text-padding;
+    padding-left: $text-padding;
     font-size: $base-font-size * 0.9;
     font-family: $base-font-family;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    margin-bottom: 5px;
 }
 
 /**
  * Posts
  */
 .post-header {
+    margin-bottom: 17px;
     font-family: $header-font-family;
-    margin-bottom: $spacing-unit;
+    display: block;
     position: relative;
 }
 
