--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -76,7 +76,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: $base-font-weight;
 }
 
-h1, h2 {
+h1 {
     padding-bottom: 4px;
     border-bottom: 1px solid $grey-color;
 }
