--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -218,6 +218,7 @@ footer :target {
 
 footer {
   border-top: 1px solid $grey-color-light;
+  margin-top: 50px;
   padding-top: 10px;
   padding-left: 10px;
 }
