--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
     <b class="post-title">{{ page.title }}</b>
   </header>
 
-  <div class="post-content">
+  <div class="post-content" href="#maincontent">
     {{ content }}
   </div>
 
