--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -222,3 +222,17 @@ footer {
   padding-top: 10px;
   padding-left: 10px;
 }
+
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background: #000000;
+  color: white;
+  padding: 8px;
+  z-index: 100;
+}
+
+.skip-link:focus {
+  top: 0;
+}
