--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   </header>
   <div class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></div>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content" itemprop="articleBody" href="#maincontent">
     {{ content }}
   </div>
 
