--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -85,11 +85,13 @@
 
 @media only screen and (max-width: 600px) {
 	.post-link {
-		padding-bottom: 21px;
+		padding-bottom: 13px;
+		padding-top: 13px;
 	}
 
 	.post-group {
-		margin-bottom: 12px;
+		margin-top: 13px;
+		margin-bottom: 13px;
 	}
 }
 
