high-contrast date on post

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -101,7 +101,7 @@
 }
 
 .post-meta {
-    color: $grey-color;
+    color: $grey-color-dark;
     padding-left: $text-padding;
     font-size: $base-font-size * 0.9;
     font-family: $base-font-family;
