better mobile image scaling

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -184,6 +184,13 @@ figure {
     padding-right: 50px;
 }
 
+@media only screen and (max-width: 600px) {
+	figure {
+        padding-left: 15px;
+        padding-right: 15px;
+	}
+}
+
 figcaption {
     margin-top: 8px;
     text-align: center;
